feat(event): provide new api for event service
