# services/events/src/main/scala/controller/routes/EventQueryApi.scala
@@ -1,5 +1,16 @@
 package controller.routes
 
-class EventQueryApi() extends BaseRoutes:
+import domain.commands.GetEventCommand
+import domain.models.EventConversions.*
+import service.EventService
+
+class EventQueryApi(eventService: EventService) extends BaseRoutes:
+
+  @cask.get("/event/:id_event")
+  def getEvent(id_event: String): ujson.Value =
+    val command = GetEventCommand(id_event)
+    val event   = eventService.handleCommand(command)
+
+    event.toJson
 
   initialize()
